# exchange-tochka

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/versions/: 2025_03_25_0402-a8a53aa419ce_first_migration.py  2025_04_07_2151-afd451ece05c_remove_balance_from_user_and_create_.py  2025_04_09_2043-676dc54070f3_add_instruments_and_its_management.py  2025_04_09_2120-002fbd1d4e22_add_balance.py  2025_04_22_2323-65ca00232308_add_instruments_and_its_management.py  2025_04_23_0118-b41aa5df2710_add_instruments.py  2025_04_28_2126-84f62df89879_add_balance.py  2025_04_28_2145-17b1362c45d8_is_delete_flag.py  2025_05_12_1911-ecc69bb4e6a9_new_migration.py  2025_05_12_1923-30a40ff621d1_amount_integer.py  2025_05_12_2002-85342a739688_add_order.py  2025_05_15_1553-ae60731d6fc6_add_transaction.py  2025_05_15_1611-ae663042214b_cascade_delete_balance_by_user_delete.py  2025_05_15_2002-1f285bdfaf65_add_blocked_amount_to_balance.py  2025_05_15_2236-15a4d1c863b7_cascade_for_instrument_in_order.py  2025_05_15_2326-156b361ac1b2_add_created_at_to_order.py  2025_05_16_0318-26a9773165dc_add_timezone.py  2025_05_17_0531-7b9452683a82_ticker_in_transaction.py
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  health.py  instrument.py  order.py  orderbook.py  user.py
app/api/endpoints/admin/: balance.py  instrument.py  user.py
app/core/: db.py  enums.py
app/core/auth/: current_user.py
app/core/docs/: docs.py
app/core/logs/: __init__.py  config.py  elastic_setup.py  elasticsearch.py  elasticsearch_logger.py  logs.py
app/core/middleware/: cors.py  global_.py
app/crud/: base.py
app/crud/v1/: balance.py  instrument.py  order.py  transaction.py  user.py
app/crud/v1/order/: __init__.py  balance_operations.py  base.py  crud_order.py  crud_order_v2.py  market_data.py  matching_engine.py
app/models/: __init__.py  balance.py  instrument.py  order.py  transaction.py  user.py
app/schemas/: balance.py  base.py  instrument.py  order.py  transaction.py  user.py
scripts/: start.sh  start_with_migration.sh
static/docs/: swagger-ui-bundle.js  swagger-ui.css
